<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="net.subaquatic.android.appportfolio2.MainActivityFragment"
    tools:showIn="@layout/activity_main"
    android:background="#d9e6ef"
              android:orientation="vertical"
              android:baselineAligned="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/projectSelectionLabel"
        android:id="@+id/titleView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="@dimen/portfolioButtonWidth"
        android:layout_height="wrap_content"
        android:text="@string/spotifyProject"
        android:id="@+id/spotifyProjectButton"
        android:layout_marginTop="34dp"
        android:background="#F08C35"
        android:enabled="true"
        android:onClick="@string/projectButtonClicked"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="@dimen/portfolioButtonWidth"
        android:layout_height="wrap_content"
        android:text="@string/scoresProject"
        android:id="@+id/scoresProjectButton"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:onClick="@string/projectButtonClicked"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="@dimen/portfolioButtonWidth"
        android:layout_height="wrap_content"
        android:text="@string/libraryProject"
        android:id="@+id/libraryProjectButton"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:onClick="@string/projectButtonClicked"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="@dimen/portfolioButtonWidth"
        android:layout_height="wrap_content"
        android:text="@string/bibProject"
        android:id="@+id/bibProjectButton"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:onClick="@string/projectButtonClicked"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="@dimen/portfolioButtonWidth"
        android:layout_height="wrap_content"
        android:text="@string/xyzReaderProject"
        android:id="@+id/xyzReaderProjectButton"
        android:background="#F08C35"
        android:layout_marginTop="10dp"
        android:onClick="@string/projectButtonClicked"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="@dimen/portfolioButtonWidth"
        android:layout_height="wrap_content"
        android:text="@string/capstoneProject"
        android:id="@+id/capstoneProjectButton"
        android:background="#ff0000"
        android:textColor="#ffffffff"
        android:layout_marginTop="10dp"
        android:onClick="@string/projectButtonClicked"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
